feat: transparently add 11 new course sub-pages and update links

--- a/index.html
+++ b/index.html
@@ -180,10 +180,7 @@
                         </div>
                     </div>
 
-                    <button
-                        class="w-full py-4 bg-blue-600 text-white rounded-xl font-bold hover:bg-blue-700 transition-colors shadow-lg shadow-blue-200">
-                        자세히 보기
-                    </button>
+                    <a href="intro_ethics.html" class="block text-center w-full py-4 bg-blue-600 text-white rounded-xl font-bold hover:bg-blue-700 transition-colors shadow-lg shadow-blue-200">자세히 보기</a>
                 </div>
 
                 <!-- 초급 2: AI 기초 입문 -->
@@ -226,10 +223,7 @@
                         </div>
                     </div>
 
-                    <button
-                        class="w-full py-4 bg-blue-600 text-white rounded-xl font-bold hover:bg-blue-700 transition-colors shadow-lg shadow-blue-200">
-                        자세히 보기
-                    </button>
+                    <a href="intro_basics.html" class="block text-center w-full py-4 bg-blue-600 text-white rounded-xl font-bold hover:bg-blue-700 transition-colors shadow-lg shadow-blue-200">자세히 보기</a>
                 </div>
 
                 <!-- 초급 3: AI 비즈니스 활용 -->
@@ -272,10 +266,7 @@
                         </div>
                     </div>
 
-                    <button
-                        class="w-full py-4 bg-blue-600 text-white rounded-xl font-bold hover:bg-blue-700 transition-colors shadow-lg shadow-blue-200">
-                        자세히 보기
-                    </button>
+                    <a href="intro_business.html" class="block text-center w-full py-4 bg-blue-600 text-white rounded-xl font-bold hover:bg-blue-700 transition-colors shadow-lg shadow-blue-200">자세히 보기</a>
                 </div>
 
                 <!-- 중급: AI 실무 마스터 -->
@@ -372,10 +363,7 @@
                         </div>
                     </div>
 
-                    <button
-                        class="w-full py-4 bg-orange-600 text-white rounded-xl font-bold hover:bg-orange-700 transition-colors shadow-lg shadow-orange-200">
-                        자세히 보기
-                    </button>
+                    <a href="expert_advanced.html" class="block text-center w-full py-4 bg-orange-600 text-white rounded-xl font-bold hover:bg-orange-700 transition-colors shadow-lg shadow-orange-200">자세히 보기</a>
                 </div>
 
                 <!-- 특화 1: AI 마케팅 전문가 -->
@@ -418,10 +406,7 @@
                         </div>
                     </div>
 
-                    <button
-                        class="w-full py-4 bg-pink-600 text-white rounded-xl font-bold hover:bg-pink-700 transition-colors shadow-lg shadow-pink-200">
-                        자세히 보기
-                    </button>
+                    <a href="special_marketing.html" class="block text-center w-full py-4 bg-pink-600 text-white rounded-xl font-bold hover:bg-pink-700 transition-colors shadow-lg shadow-pink-200">자세히 보기</a>
                 </div>
 
                 <!-- 특화 2: AI 제조 전문가 -->
@@ -464,10 +449,7 @@
                         </div>
                     </div>
 
-                    <button
-                        class="w-full py-4 bg-gray-600 text-white rounded-xl font-bold hover:bg-gray-700 transition-colors shadow-lg shadow-gray-200">
-                        자세히 보기
-                    </button>
+                    <a href="special_manufacturing.html" class="block text-center w-full py-4 bg-gray-600 text-white rounded-xl font-bold hover:bg-gray-700 transition-colors shadow-lg shadow-gray-200">자세히 보기</a>
                 </div>
 
                 <!-- 특화 3: AI 데이터 분석가 -->
@@ -510,10 +492,7 @@
                         </div>
                     </div>
 
-                    <button
-                        class="w-full py-4 bg-cyan-600 text-white rounded-xl font-bold hover:bg-cyan-700 transition-colors shadow-lg shadow-cyan-200">
-                        자세히 보기
-                    </button>
+                    <a href="special_data.html" class="block text-center w-full py-4 bg-cyan-600 text-white rounded-xl font-bold hover:bg-cyan-700 transition-colors shadow-lg shadow-cyan-200">자세히 보기</a>
                 </div>
 
                 <!-- 특화 4: AI 영상 크리에이터 -->
@@ -556,10 +535,7 @@
                         </div>
                     </div>
 
-                    <button
-                        class="w-full py-4 bg-red-600 text-white rounded-xl font-bold hover:bg-red-700 transition-colors shadow-lg shadow-red-200">
-                        자세히 보기
-                    </button>
+                    <a href="special_video.html" class="block text-center w-full py-4 bg-red-600 text-white rounded-xl font-bold hover:bg-red-700 transition-colors shadow-lg shadow-red-200">자세히 보기</a>
                 </div>
 
                 <!-- 관리: AI 보안 및 윤리 -->
@@ -603,10 +579,7 @@
                         </div>
                     </div>
 
-                    <button
-                        class="w-full py-4 bg-yellow-600 text-white rounded-xl font-bold hover:bg-yellow-700 transition-colors shadow-lg shadow-yellow-200">
-                        자세히 보기
-                    </button>
+                    <a href="management_leadership.html" class="block text-center w-full py-4 bg-yellow-600 text-white rounded-xl font-bold hover:bg-yellow-700 transition-colors shadow-lg shadow-yellow-200">자세히 보기</a>
                 </div>
 
                 <!-- 전략: AI 비즈니스 컨설턴트 -->
@@ -650,10 +623,7 @@
                         </div>
                     </div>
 
-                    <button
-                        class="w-full py-4 bg-emerald-600 text-white rounded-xl font-bold hover:bg-emerald-700 transition-colors shadow-lg shadow-emerald-200">
-                        자세히 보기
-                    </button>
+                    <a href="strategy_consultant.html" class="block text-center w-full py-4 bg-emerald-600 text-white rounded-xl font-bold hover:bg-emerald-700 transition-colors shadow-lg shadow-emerald-200">자세히 보기</a>
                 </div>
 
                 <!-- 마스터: 비즈니스 앱 크리에이터 -->
@@ -697,10 +667,7 @@
                         </div>
                     </div>
 
-                    <button
-                        class="w-full py-4 bg-indigo-600 text-white rounded-xl font-bold hover:bg-indigo-700 transition-colors shadow-lg shadow-indigo-200">
-                        자세히 보기
-                    </button>
+                    <a href="master_app_creator.html" class="block text-center w-full py-4 bg-indigo-600 text-white rounded-xl font-bold hover:bg-indigo-700 transition-colors shadow-lg shadow-indigo-200">자세히 보기</a>
                 </div>
             </div>
         </div>
