--- a/intro_basics.html
+++ b/intro_basics.html
@@ -137,7 +137,7 @@
             </div>
 
             <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
-                <!-- Strength 1: Data-Driven Decision Making -->
+                <!-- Strength 1: 누구나 가능한 프롬프트 -->
                 <div class="relative group">
                     <div
                         class="absolute inset-0 bg-gradient-to-r from-blue-600 to-cyan-600 rounded-3xl blur-xl opacity-50 group-hover:opacity-75 transition">
@@ -145,28 +145,26 @@
                     <div class="relative bg-white/10 backdrop-blur-lg rounded-3xl p-8 border border-white/20 h-full">
                         <div
                             class="w-16 h-16 bg-gradient-to-br from-blue-500 to-cyan-500 rounded-2xl flex items-center justify-center mb-6">
-                            <i class="fas fa-chart-line text-3xl text-white"></i>
+                            <i class="fas fa-magic text-3xl text-white"></i>
                         </div>
                         <span class="text-blue-300 text-sm font-semibold">STRENGTH 01</span>
-                        <h3 class="text-xl font-bold mt-2 mb-4">데이터 기반 의사결정 역량 강화</h3>
+                        <h3 class="text-xl font-bold mt-2 mb-4">누구나 가능한 프롬프트</h3>
                         <div class="space-y-4 text-gray-300 text-sm">
                             <div class="bg-white/5 rounded-xl p-4">
                                 <p class="font-semibold text-white mb-2"><i
                                         class="fas fa-star text-yellow-400 mr-2"></i>강점</p>
-                                <p>6개월간의 매출, 마케팅 비용, 반품률 등 복잡한 수치를 AI로 분석하여 <b class="text-cyan-300">'경영진 보고서' 초안</b>을
-                                    뽑아내는 과정은 직장인들이 가장 필요로 하는 기능입니다.</p>
+                                <p>개발 지식 없이도 자연어만으로 AI를 제어하는 <b class='text-blue-300'>핵심 프롬프트 패턴 5가지</b>를 집중 훈련합니다.</p>
                             </div>
                             <div class="bg-white/5 rounded-xl p-4">
                                 <p class="font-semibold text-white mb-2"><i
                                         class="fas fa-rocket text-emerald-400 mr-2"></i>기대효과</p>
-                                <p>수작업으로 몇 시간 걸리던 데이터 요약 및 인사이트 도출 작업을 <b class="text-emerald-300">단 몇 분 만에 해결</b>하는 '업무
-                                    생산성 혁명'을 체험합니다.</p>
+                                <p>검색보다 빠른 해답 도출! 업무 처리 속도가 <b class='text-emerald-300'>기존 대비 3배 이상</b> 빨라지는 경험을 하게 됩니다.</p>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <!-- Strength 2: All-in-One Multimodal -->
+                <!-- Strength 2: 업무 자동화 첫걸음 -->
                 <div class="relative group">
                     <div
                         class="absolute inset-0 bg-gradient-to-r from-violet-600 to-purple-600 rounded-3xl blur-xl opacity-50 group-hover:opacity-75 transition">
@@ -174,29 +172,26 @@
                     <div class="relative bg-white/10 backdrop-blur-lg rounded-3xl p-8 border border-white/20 h-full">
                         <div
                             class="w-16 h-16 bg-gradient-to-br from-violet-500 to-purple-500 rounded-2xl flex items-center justify-center mb-6">
-                            <i class="fas fa-layer-group text-3xl text-white"></i>
+                            <i class="fas fa-sync text-3xl text-white"></i>
                         </div>
                         <span class="text-violet-300 text-sm font-semibold">STRENGTH 02</span>
-                        <h3 class="text-xl font-bold mt-2 mb-4">올인원 멀티모달 마스터</h3>
+                        <h3 class="text-xl font-bold mt-2 mb-4">업무 자동화 첫걸음</h3>
                         <div class="space-y-4 text-gray-300 text-sm">
                             <div class="bg-white/5 rounded-xl p-4">
                                 <p class="font-semibold text-white mb-2"><i
                                         class="fas fa-star text-yellow-400 mr-2"></i>강점</p>
-                                <p><b class="text-pink-300">보고서 작성(Text)</b>, <b class="text-orange-300">마케팅 시각
-                                        자료(Image)</b>, <b class="text-cyan-300">홍보 영상(Video)</b>까지 AI 도구들을 체계적으로
-                                    연결(Pipeline)하여 사용하는 법을 배웁니다.</p>
+                                <p>반복되는 이메일 작성, 회의록 요약, 일정 관리 등 <b class='text-purple-300'>귀찮은 단순 업무</b>를 AI에게 맡기는 법을 배웁니다.</p>
                             </div>
                             <div class="bg-white/5 rounded-xl p-4">
                                 <p class="font-semibold text-white mb-2"><i
                                         class="fas fa-rocket text-emerald-400 mr-2"></i>기대효과</p>
-                                <p>기획부터 홍보물 제작까지 혼자서 수행할 수 있는 <b class="text-emerald-300">'1인 기업가 수준'</b>의 실무 역량을 갖추게
-                                    됩니다.</p>
+                                <p>하루 1시간 이상의 <b class='text-emerald-300'>여유 시간</b>을 확보하여 더 중요하고 창의적인 일에 집중할 수 있습니다.</p>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <!-- Strength 3: Performance-Oriented Project -->
+                <!-- Strength 3: 실습 위주 기초 훈련 -->
                 <div class="relative group">
                     <div
                         class="absolute inset-0 bg-gradient-to-r from-amber-600 to-orange-600 rounded-3xl blur-xl opacity-50 group-hover:opacity-75 transition">
@@ -204,22 +199,20 @@
                     <div class="relative bg-white/10 backdrop-blur-lg rounded-3xl p-8 border border-white/20 h-full">
                         <div
                             class="w-16 h-16 bg-gradient-to-br from-amber-500 to-orange-500 rounded-2xl flex items-center justify-center mb-6">
-                            <i class="fas fa-trophy text-3xl text-white"></i>
+                            <i class="fas fa-laptop-house text-3xl text-white"></i>
                         </div>
                         <span class="text-amber-300 text-sm font-semibold">STRENGTH 03</span>
-                        <h3 class="text-xl font-bold mt-2 mb-4">성과 중심 프로젝트 설계</h3>
+                        <h3 class="text-xl font-bold mt-2 mb-4">실습 위주 기초 훈련</h3>
                         <div class="space-y-4 text-gray-300 text-sm">
                             <div class="bg-white/5 rounded-xl p-4">
                                 <p class="font-semibold text-white mb-2"><i
                                         class="fas fa-star text-yellow-400 mr-2"></i>강점</p>
-                                <p>완성도, 창의성, 실용성 등 구체적인 <b class="text-yellow-300">KPI(핵심성과지표)</b>를 설정하여 학습 결과물을 평가합니다.
-                                    Lean/6Sigma의 '측정 가능한 개선' 철학을 적용합니다.</p>
+                                <p>이론은 최소화하고, 직접 ChatGPT와 Gemini를 켜두고 따라 하는 <b class='text-orange-300'>100% 실습 중심</b> 강의입니다.</p>
                             </div>
                             <div class="bg-white/5 rounded-xl p-4">
                                 <p class="font-semibold text-white mb-2"><i
                                         class="fas fa-rocket text-emerald-400 mr-2"></i>기대효과</p>
-                                <p>교육이 끝난 후 수강생의 손에는 <b class="text-emerald-300">'AI 기반 비즈니스 기획안'</b>이라는 현업에 바로 제출 가능한
-                                    실질적인 결과물이 남습니다.</p>
+                                <p>AI에 대한 막연한 두려움을 없애고, <b class='text-emerald-300'>'나도 할 수 있다'</b>는 디지털 자신감을 완전히 회복합니다.</p>
                             </div>
                         </div>
                     </div>
