--- a/intro_ethics.html
+++ b/intro_ethics.html
@@ -137,7 +137,7 @@
             </div>
 
             <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
-                <!-- Strength 1: Data-Driven Decision Making -->
+                <!-- Strength 1: 필수 규제 완벽 대비 -->
                 <div class="relative group">
                     <div
                         class="absolute inset-0 bg-gradient-to-r from-blue-600 to-cyan-600 rounded-3xl blur-xl opacity-50 group-hover:opacity-75 transition">
@@ -145,28 +145,26 @@
                     <div class="relative bg-white/10 backdrop-blur-lg rounded-3xl p-8 border border-white/20 h-full">
                         <div
                             class="w-16 h-16 bg-gradient-to-br from-blue-500 to-cyan-500 rounded-2xl flex items-center justify-center mb-6">
-                            <i class="fas fa-chart-line text-3xl text-white"></i>
+                            <i class="fas fa-shield-alt text-3xl text-white"></i>
                         </div>
                         <span class="text-blue-300 text-sm font-semibold">STRENGTH 01</span>
-                        <h3 class="text-xl font-bold mt-2 mb-4">데이터 기반 의사결정 역량 강화</h3>
+                        <h3 class="text-xl font-bold mt-2 mb-4">필수 규제 완벽 대비</h3>
                         <div class="space-y-4 text-gray-300 text-sm">
                             <div class="bg-white/5 rounded-xl p-4">
                                 <p class="font-semibold text-white mb-2"><i
                                         class="fas fa-star text-yellow-400 mr-2"></i>강점</p>
-                                <p>6개월간의 매출, 마케팅 비용, 반품률 등 복잡한 수치를 AI로 분석하여 <b class="text-cyan-300">'경영진 보고서' 초안</b>을
-                                    뽑아내는 과정은 직장인들이 가장 필요로 하는 기능입니다.</p>
+                                <p>EU AI Act, 국내 AI 기본법 등 급변하는 국내외 AI 규제 환경을 분석하여, <b class='text-blue-300'>법적 리스크를 최소화</b>하는 가이드를 제공합니다.</p>
                             </div>
                             <div class="bg-white/5 rounded-xl p-4">
                                 <p class="font-semibold text-white mb-2"><i
                                         class="fas fa-rocket text-emerald-400 mr-2"></i>기대효과</p>
-                                <p>수작업으로 몇 시간 걸리던 데이터 요약 및 인사이트 도출 작업을 <b class="text-emerald-300">단 몇 분 만에 해결</b>하는 '업무
-                                    생산성 혁명'을 체험합니다.</p>
+                                <p>기업 도입 시 발생할 수 있는 저작권 침해 및 데이터 유출 사고를 <b class='text-emerald-300'>사전에 100% 예방</b>하는 체크리스트를 확보합니다.</p>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <!-- Strength 2: All-in-One Multimodal -->
+                <!-- Strength 2: 윤리적 의사결정 프레임워크 -->
                 <div class="relative group">
                     <div
                         class="absolute inset-0 bg-gradient-to-r from-violet-600 to-purple-600 rounded-3xl blur-xl opacity-50 group-hover:opacity-75 transition">
@@ -174,29 +172,26 @@
                     <div class="relative bg-white/10 backdrop-blur-lg rounded-3xl p-8 border border-white/20 h-full">
                         <div
                             class="w-16 h-16 bg-gradient-to-br from-violet-500 to-purple-500 rounded-2xl flex items-center justify-center mb-6">
-                            <i class="fas fa-layer-group text-3xl text-white"></i>
+                            <i class="fas fa-balance-scale text-3xl text-white"></i>
                         </div>
                         <span class="text-violet-300 text-sm font-semibold">STRENGTH 02</span>
-                        <h3 class="text-xl font-bold mt-2 mb-4">올인원 멀티모달 마스터</h3>
+                        <h3 class="text-xl font-bold mt-2 mb-4">윤리적 의사결정 프레임워크</h3>
                         <div class="space-y-4 text-gray-300 text-sm">
                             <div class="bg-white/5 rounded-xl p-4">
                                 <p class="font-semibold text-white mb-2"><i
                                         class="fas fa-star text-yellow-400 mr-2"></i>강점</p>
-                                <p><b class="text-pink-300">보고서 작성(Text)</b>, <b class="text-orange-300">마케팅 시각
-                                        자료(Image)</b>, <b class="text-cyan-300">홍보 영상(Video)</b>까지 AI 도구들을 체계적으로
-                                    연결(Pipeline)하여 사용하는 법을 배웁니다.</p>
+                                <p>AI 편향성, 할루시네이션 등 실무에서 마주칠 윤리적 딜레마 상황에서 <b class='text-purple-300'>올바른 판단을 내리는 기준</b>을 학습합니다.</p>
                             </div>
                             <div class="bg-white/5 rounded-xl p-4">
                                 <p class="font-semibold text-white mb-2"><i
                                         class="fas fa-rocket text-emerald-400 mr-2"></i>기대효과</p>
-                                <p>기획부터 홍보물 제작까지 혼자서 수행할 수 있는 <b class="text-emerald-300">'1인 기업가 수준'</b>의 실무 역량을 갖추게
-                                    됩니다.</p>
+                                <p>고객과 주주에게 신뢰받는 <b class='text-emerald-300'>'책임감 있는 AI(Responsible AI)'</b> 브랜드 이미지를 구축합니다.</p>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <!-- Strength 3: Performance-Oriented Project -->
+                <!-- Strength 3: 조직 AI 거버넌스 수립 -->
                 <div class="relative group">
                     <div
                         class="absolute inset-0 bg-gradient-to-r from-amber-600 to-orange-600 rounded-3xl blur-xl opacity-50 group-hover:opacity-75 transition">
@@ -204,22 +199,20 @@
                     <div class="relative bg-white/10 backdrop-blur-lg rounded-3xl p-8 border border-white/20 h-full">
                         <div
                             class="w-16 h-16 bg-gradient-to-br from-amber-500 to-orange-500 rounded-2xl flex items-center justify-center mb-6">
-                            <i class="fas fa-trophy text-3xl text-white"></i>
+                            <i class="fas fa-users-cog text-3xl text-white"></i>
                         </div>
                         <span class="text-amber-300 text-sm font-semibold">STRENGTH 03</span>
-                        <h3 class="text-xl font-bold mt-2 mb-4">성과 중심 프로젝트 설계</h3>
+                        <h3 class="text-xl font-bold mt-2 mb-4">조직 AI 거버넌스 수립</h3>
                         <div class="space-y-4 text-gray-300 text-sm">
                             <div class="bg-white/5 rounded-xl p-4">
                                 <p class="font-semibold text-white mb-2"><i
                                         class="fas fa-star text-yellow-400 mr-2"></i>강점</p>
-                                <p>완성도, 창의성, 실용성 등 구체적인 <b class="text-yellow-300">KPI(핵심성과지표)</b>를 설정하여 학습 결과물을 평가합니다.
-                                    Lean/6Sigma의 '측정 가능한 개선' 철학을 적용합니다.</p>
+                                <p>단순 이론이 아닌, 실제 기업에 바로 적용 가능한 <b class='text-orange-300'>AI 사용 가이드라인 및 사내 정책</b> 표준안을 제공합니다.</p>
                             </div>
                             <div class="bg-white/5 rounded-xl p-4">
                                 <p class="font-semibold text-white mb-2"><i
                                         class="fas fa-rocket text-emerald-400 mr-2"></i>기대효과</p>
-                                <p>교육이 끝난 후 수강생의 손에는 <b class="text-emerald-300">'AI 기반 비즈니스 기획안'</b>이라는 현업에 바로 제출 가능한
-                                    실질적인 결과물이 남습니다.</p>
+                                <p>수강 후 즉시 우리 회사에 맞는 <b class='text-emerald-300'>AI 윤리 강령 및 보안 지침서</b>를 완성하여 배포할 수 있습니다.</p>
                             </div>
                         </div>
                     </div>
