--- a/special_video.html
+++ b/special_video.html
@@ -137,7 +137,7 @@
             </div>
 
             <div class="grid md:grid-cols-3 gap-8 max-w-6xl mx-auto">
-                <!-- Strength 1: Data-Driven Decision Making -->
+                <!-- Strength 1: 촬영 없는 영상 제작 -->
                 <div class="relative group">
                     <div
                         class="absolute inset-0 bg-gradient-to-r from-blue-600 to-cyan-600 rounded-3xl blur-xl opacity-50 group-hover:opacity-75 transition">
@@ -145,28 +145,26 @@
                     <div class="relative bg-white/10 backdrop-blur-lg rounded-3xl p-8 border border-white/20 h-full">
                         <div
                             class="w-16 h-16 bg-gradient-to-br from-blue-500 to-cyan-500 rounded-2xl flex items-center justify-center mb-6">
-                            <i class="fas fa-chart-line text-3xl text-white"></i>
+                            <i class="fas fa-video text-3xl text-white"></i>
                         </div>
                         <span class="text-blue-300 text-sm font-semibold">STRENGTH 01</span>
-                        <h3 class="text-xl font-bold mt-2 mb-4">데이터 기반 의사결정 역량 강화</h3>
+                        <h3 class="text-xl font-bold mt-2 mb-4">촬영 없는 영상 제작</h3>
                         <div class="space-y-4 text-gray-300 text-sm">
                             <div class="bg-white/5 rounded-xl p-4">
                                 <p class="font-semibold text-white mb-2"><i
                                         class="fas fa-star text-yellow-400 mr-2"></i>강점</p>
-                                <p>6개월간의 매출, 마케팅 비용, 반품률 등 복잡한 수치를 AI로 분석하여 <b class="text-cyan-300">'경영진 보고서' 초안</b>을
-                                    뽑아내는 과정은 직장인들이 가장 필요로 하는 기능입니다.</p>
+                                <p>카메라, 조명, 마이크 없이 오직 <b class='text-blue-300'>AI 툴(Runway, Sora 등)</b>만으로 고퀄리티 영상을 생성합니다.</p>
                             </div>
                             <div class="bg-white/5 rounded-xl p-4">
                                 <p class="font-semibold text-white mb-2"><i
                                         class="fas fa-rocket text-emerald-400 mr-2"></i>기대효과</p>
-                                <p>수작업으로 몇 시간 걸리던 데이터 요약 및 인사이트 도출 작업을 <b class="text-emerald-300">단 몇 분 만에 해결</b>하는 '업무
-                                    생산성 혁명'을 체험합니다.</p>
+                                <p>영상 한 편 제작에 들던 수일의 시간과 비용을 <b class='text-emerald-300'>1/10 수준으로 압축</b>합니다.</p>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <!-- Strength 2: All-in-One Multimodal -->
+                <!-- Strength 2: 글로벌 콘텐츠화 -->
                 <div class="relative group">
                     <div
                         class="absolute inset-0 bg-gradient-to-r from-violet-600 to-purple-600 rounded-3xl blur-xl opacity-50 group-hover:opacity-75 transition">
@@ -174,29 +172,26 @@
                     <div class="relative bg-white/10 backdrop-blur-lg rounded-3xl p-8 border border-white/20 h-full">
                         <div
                             class="w-16 h-16 bg-gradient-to-br from-violet-500 to-purple-500 rounded-2xl flex items-center justify-center mb-6">
-                            <i class="fas fa-layer-group text-3xl text-white"></i>
+                            <i class="fas fa-globe text-3xl text-white"></i>
                         </div>
                         <span class="text-violet-300 text-sm font-semibold">STRENGTH 02</span>
-                        <h3 class="text-xl font-bold mt-2 mb-4">올인원 멀티모달 마스터</h3>
+                        <h3 class="text-xl font-bold mt-2 mb-4">글로벌 콘텐츠화</h3>
                         <div class="space-y-4 text-gray-300 text-sm">
                             <div class="bg-white/5 rounded-xl p-4">
                                 <p class="font-semibold text-white mb-2"><i
                                         class="fas fa-star text-yellow-400 mr-2"></i>강점</p>
-                                <p><b class="text-pink-300">보고서 작성(Text)</b>, <b class="text-orange-300">마케팅 시각
-                                        자료(Image)</b>, <b class="text-cyan-300">홍보 영상(Video)</b>까지 AI 도구들을 체계적으로
-                                    연결(Pipeline)하여 사용하는 법을 배웁니다.</p>
+                                <p>AI 더빙과 자막 번역 기술로, 한국어 영상 하나를 순식간에 <b class='text-purple-300'>10개국어 버전</b>으로 확산시킵니다.</p>
                             </div>
                             <div class="bg-white/5 rounded-xl p-4">
                                 <p class="font-semibold text-white mb-2"><i
                                         class="fas fa-rocket text-emerald-400 mr-2"></i>기대효과</p>
-                                <p>기획부터 홍보물 제작까지 혼자서 수행할 수 있는 <b class="text-emerald-300">'1인 기업가 수준'</b>의 실무 역량을 갖추게
-                                    됩니다.</p>
+                                <p>언어 장벽 없이 전 세계 시청자를 나의 <b class='text-emerald-300'>잠재 고객으로 확보</b>합니다.</p>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <!-- Strength 3: Performance-Oriented Project -->
+                <!-- Strength 3: 숏폼 대량 생산 -->
                 <div class="relative group">
                     <div
                         class="absolute inset-0 bg-gradient-to-r from-amber-600 to-orange-600 rounded-3xl blur-xl opacity-50 group-hover:opacity-75 transition">
@@ -204,22 +199,20 @@
                     <div class="relative bg-white/10 backdrop-blur-lg rounded-3xl p-8 border border-white/20 h-full">
                         <div
                             class="w-16 h-16 bg-gradient-to-br from-amber-500 to-orange-500 rounded-2xl flex items-center justify-center mb-6">
-                            <i class="fas fa-trophy text-3xl text-white"></i>
+                            <i class="fas fa-bolt text-3xl text-white"></i>
                         </div>
                         <span class="text-amber-300 text-sm font-semibold">STRENGTH 03</span>
-                        <h3 class="text-xl font-bold mt-2 mb-4">성과 중심 프로젝트 설계</h3>
+                        <h3 class="text-xl font-bold mt-2 mb-4">숏폼 대량 생산</h3>
                         <div class="space-y-4 text-gray-300 text-sm">
                             <div class="bg-white/5 rounded-xl p-4">
                                 <p class="font-semibold text-white mb-2"><i
                                         class="fas fa-star text-yellow-400 mr-2"></i>강점</p>
-                                <p>완성도, 창의성, 실용성 등 구체적인 <b class="text-yellow-300">KPI(핵심성과지표)</b>를 설정하여 학습 결과물을 평가합니다.
-                                    Lean/6Sigma의 '측정 가능한 개선' 철학을 적용합니다.</p>
+                                <p>긴 영상을 하이라이트 쇼츠(Shorts)로 자동 편집하고 대량 생산하는 <b class='text-orange-300'>바이럴 공장 시스템</b>을 구축합니다.</p>
                             </div>
                             <div class="bg-white/5 rounded-xl p-4">
                                 <p class="font-semibold text-white mb-2"><i
                                         class="fas fa-rocket text-emerald-400 mr-2"></i>기대효과</p>
-                                <p>교육이 끝난 후 수강생의 손에는 <b class="text-emerald-300">'AI 기반 비즈니스 기획안'</b>이라는 현업에 바로 제출 가능한
-                                    실질적인 결과물이 남습니다.</p>
+                                <p>압도적인 콘텐츠 물량 공세로 유튜브/인스타 채널을 <b class='text-emerald-300'>가장 빠르게 급성장</b>시킵니다.</p>
                             </div>
                         </div>
                     </div>
