feat: Link dashboards and landing pages to individual classrooms

--- a/master_index.html
+++ b/master_index.html
@@ -605,8 +605,8 @@
                 if (enterBtn) {
                     enterBtn.classList.remove('hidden');
                     enterBtn.title = user.email + "님 환영합니다";
-                    // Explicitly set link to day01_lecture.html
-                    enterBtn.onclick = () => window.location.href = 'day01_lecture.html';
+                    // Explicitly set link to classroom.html
+                    enterBtn.onclick = () => window.location.href = 'classroom.html';
                     console.log("Enter button activated for " + user.email);
                 }
             } else {
