--- a/intro_ethics.html
+++ b/intro_ethics.html
@@ -113,7 +113,7 @@
                     class="hidden px-8 py-3 bg-red-600/20 backdrop-blur-md border border-white/30 text-white rounded-full font-bold hover:bg-white/20 transition-all shadow-lg flex items-center gap-2">
                     <i class="fas fa-file-pdf"></i> 과정 소개(PDF)
                 </button>
-                <button id="enterBtn" onclick="window.location.href='dashboard.html'"
+                <button id="enterBtn" onclick="window.location.href='classroom_ethics.html'"
                     class="hidden px-8 py-3 bg-emerald-500 text-white border border-emerald-400 rounded-full font-bold hover:bg-emerald-600 transition-colors shadow-lg flex items-center gap-2 animate-pulse">
                     <i class="fas fa-chalkboard-teacher"></i> 강의실 입장
                 </button>
