--- a/classroom_basics.html
+++ b/classroom_basics.html
@@ -44,7 +44,7 @@
                     <i class="fas fa-graduation-cap"></i>
                 </div>
                 <div>
-                    <h1 class="font-bold text-gray-800 text-lg leading-tight">AI 기초 입문</h1>
+                    <h1 class="font-bold text-gray-800 text-lg leading-tight">AI Master Class</h1>
                     <p class="text-xs text-gray-500 font-medium">나의 강의실</p>
                 </div>
             </div>
@@ -96,7 +96,7 @@
                                 <div class="flex items-center gap-4">
                                     <span class="text-4xl font-black opacity-30">01</span>
                                     <div>
-                                        <h3 class="text-2xl font-bold">오전: 생성형 AI와 친해지기</h3>
+                                        <h3 class="text-2xl font-bold">Day 1: 생성형 AI와 친해지기</h3>
                                         <p class="opacity-80">LLM의 원리 이해와 3대 AI(ChatGPT, Gemini, Claude) 비교</p>
                                     </div>
                                 </div>
@@ -109,20 +109,19 @@
                             </div>
                         </div>
                         <div class="p-8">
-                            <div class="bg-gray-50 rounded-2xl p-6">
+                            <div class="bg-indigo-50 rounded-2xl p-6">
                                 <ul class="space-y-3 text-gray-700">
                                     
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-indigo-500 mt-1"></i><span>할루시네이션(환각)의 원리와 대처법</span></li>
+                                            class="fas fa-check-circle text-indigo-600 mt-1"></i><span>할루시네이션(환각)의 원리와 대처법</span></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-indigo-500 mt-1"></i><span>나에게 맞는 최적의 AI 모델 찾기</span></li>
+                                            class="fas fa-check-circle text-indigo-600 mt-1"></i><span>나에게 맞는 최적의 AI 모델 찾기</span></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-indigo-500 mt-1"></i><span>모바일 앱 설치 및 기본 세팅</span></li>
+                                            class="fas fa-check-circle text-indigo-600 mt-1"></i><span>모바일 앱 설치 및 기본 세팅</span></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
-
                     <!-- Module 2 -->
                     <div class="day-card bg-white rounded-3xl shadow-xl overflow-hidden border border-gray-100 ring-4 ring-transparent hover:ring-emerald-50 transition-all">
                         <div class="bg-gradient-to-r from-emerald-600 to-emerald-800 text-white px-8 py-6">
@@ -130,7 +129,7 @@
                                 <div class="flex items-center gap-4">
                                     <span class="text-4xl font-black opacity-30">02</span>
                                     <div>
-                                        <h3 class="text-2xl font-bold">오후: 프롬프트 엔지니어링 기초</h3>
+                                        <h3 class="text-2xl font-bold">Day 2: 프롬프트 엔지니어링 기초</h3>
                                         <p class="opacity-80">원하는 결과를 한 번에 얻는 질문의 기술</p>
                                     </div>
                                 </div>
@@ -143,15 +142,15 @@
                             </div>
                         </div>
                         <div class="p-8">
-                            <div class="bg-gray-50 rounded-2xl p-6">
+                            <div class="bg-emerald-50 rounded-2xl p-6">
                                 <ul class="space-y-3 text-gray-700">
                                     
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-indigo-500 mt-1"></i><span>명확한 지시어(Persona, Context) 작성법</span></li>
+                                            class="fas fa-check-circle text-emerald-600 mt-1"></i><span>명확한 지시어(Persona, Context) 작성법</span></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-indigo-500 mt-1"></i><span>자료 요약 및 이메일 초안 작성 실습</span></li>
+                                            class="fas fa-check-circle text-emerald-600 mt-1"></i><span>자료 요약 및 이메일 초안 작성 실습</span></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-indigo-500 mt-1"></i><span>엑셀 수식 및 번역 업무 자동화</span></li>
+                                            class="fas fa-check-circle text-emerald-600 mt-1"></i><span>엑셀 수식 및 번역 업무 자동화</span></li>
                                 </ul>
                             </div>
                         </div>
@@ -183,12 +182,7 @@
                 if (emailDisplay) emailDisplay.innerText = user.email + "님 환영합니다";
 
                 // 진도 추적 UI 초기화
-                try {
-                    await displayTotalProgress(user.uid, 'progressContainer');
-                    await displayNextLesson(user.uid, 'nextLessonContainer');
-                } catch (error) {
-                    console.error('진도 표시 오류:', error);
-                }
+                // Course ID mapping logic could be added here later
             }
         });
 
