--- a/classroom_ethics.html
+++ b/classroom_ethics.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>나의 강의실 | AI소개 및 윤리</title>
+    <title>나의 강의실 | AI 윤리 및 규제</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="css/common.css">
@@ -44,7 +44,7 @@
                     <i class="fas fa-graduation-cap"></i>
                 </div>
                 <div>
-                    <h1 class="font-bold text-gray-800 text-lg leading-tight">AI소개 및 윤리</h1>
+                    <h1 class="font-bold text-gray-800 text-lg leading-tight">AI Master Class</h1>
                     <p class="text-xs text-gray-500 font-medium">나의 강의실</p>
                 </div>
             </div>
@@ -96,7 +96,7 @@
                                 <div class="flex items-center gap-4">
                                     <span class="text-4xl font-black opacity-30">01</span>
                                     <div>
-                                        <h3 class="text-2xl font-bold">오전: AI 윤리와 규제 트렌드</h3>
+                                        <h3 class="text-2xl font-bold">Day 1: AI 윤리와 규제 트렌드</h3>
                                         <p class="opacity-80">국내외(EU AI Act) 법적 규제와 기업 리스크 분석</p>
                                     </div>
                                 </div>
@@ -109,20 +109,19 @@
                             </div>
                         </div>
                         <div class="p-8">
-                            <div class="bg-gray-50 rounded-2xl p-6">
+                            <div class="bg-indigo-50 rounded-2xl p-6">
                                 <ul class="space-y-3 text-gray-700">
                                     
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-indigo-500 mt-1"></i><span>생성형 AI의 저작권 이슈 사례</span></li>
+                                            class="fas fa-check-circle text-indigo-600 mt-1"></i><span>생성형 AI의 저작권 이슈 사례</span></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-indigo-500 mt-1"></i><span>기업 데이터 유출 사고 유형</span></li>
+                                            class="fas fa-check-circle text-indigo-600 mt-1"></i><span>기업 데이터 유출 사고 유형</span></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-indigo-500 mt-1"></i><span>개인정보보호법과 AI 컴플라이언스</span></li>
+                                            class="fas fa-check-circle text-indigo-600 mt-1"></i><span>개인정보보호법과 AI 컴플라이언스</span></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
-
                     <!-- Module 2 -->
                     <div class="day-card bg-white rounded-3xl shadow-xl overflow-hidden border border-gray-100 ring-4 ring-transparent hover:ring-emerald-50 transition-all">
                         <div class="bg-gradient-to-r from-emerald-600 to-emerald-800 text-white px-8 py-6">
@@ -130,7 +129,7 @@
                                 <div class="flex items-center gap-4">
                                     <span class="text-4xl font-black opacity-30">02</span>
                                     <div>
-                                        <h3 class="text-2xl font-bold">오후: 실무 가이드라인 수립</h3>
+                                        <h3 class="text-2xl font-bold">Day 2: 실무 가이드라인 수립</h3>
                                         <p class="opacity-80">우리 회사에 맞는 AI 사용 정책 및 보안 수칙 제정</p>
                                     </div>
                                 </div>
@@ -143,15 +142,15 @@
                             </div>
                         </div>
                         <div class="p-8">
-                            <div class="bg-gray-50 rounded-2xl p-6">
+                            <div class="bg-emerald-50 rounded-2xl p-6">
                                 <ul class="space-y-3 text-gray-700">
                                     
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-indigo-500 mt-1"></i><span>프롬프트 입력 시 보안 주의사항</span></li>
+                                            class="fas fa-check-circle text-emerald-600 mt-1"></i><span>프롬프트 입력 시 보안 주의사항</span></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-indigo-500 mt-1"></i><span>AI 산출물의 사용 권한 및 책임</span></li>
+                                            class="fas fa-check-circle text-emerald-600 mt-1"></i><span>AI 산출물의 사용 권한 및 책임</span></li>
                                     <li class="flex items-start gap-2"><i
-                                            class="fas fa-check-circle text-indigo-500 mt-1"></i><span>사내 AI 윤리 강령 작성 실습</span></li>
+                                            class="fas fa-check-circle text-emerald-600 mt-1"></i><span>사내 AI 윤리 강령 작성 실습</span></li>
                                 </ul>
                             </div>
                         </div>
@@ -183,12 +182,7 @@
                 if (emailDisplay) emailDisplay.innerText = user.email + "님 환영합니다";
 
                 // 진도 추적 UI 초기화
-                try {
-                    await displayTotalProgress(user.uid, 'progressContainer');
-                    await displayNextLesson(user.uid, 'nextLessonContainer');
-                } catch (error) {
-                    console.error('진도 표시 오류:', error);
-                }
+                // Course ID mapping logic could be added here later
             }
         });
 
