feat: Implement view/listen lecture links and generate 7 ethics textbooks

--- a/lecture_ethics_class2.html
+++ b/lecture_ethics_class2.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
         body { font-family: 'Pretendard', sans-serif; scroll-behavior: smooth; }
-        .gradient-bg { background: linear-gradient(135deg, #4f46e5 0%, #7c3aed 100%); } /* Indigo-Purple for Ethics */
+        .gradient-bg { background: linear-gradient(135deg, #4f46e5 0%, #7c3aed 100%); }
         .card-shadow { box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.05); }
     </style>
 </head>
@@ -53,12 +53,12 @@
                                 <span class="bg-emerald-50 text-emerald-700 px-3 py-1 rounded-md text-xs font-semibold">Security</span><span class="bg-emerald-50 text-emerald-700 px-3 py-1 rounded-md text-xs font-semibold">Prompt</span>
                             </div>
                             <div class="flex gap-2">
-                                <button class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors">
+                                <a href="textbook_ethics_prompt.html" class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors">
                                     <i class="fas fa-book-reader"></i> 강의 보기
-                                </button>
-                                <button class="inline-flex items-center gap-2 px-4 py-2 bg-emerald-600 text-white text-sm font-bold rounded-lg hover:bg-emerald-700 transition-colors">
+                                </a>
+                                <a href="https://al-class.vercel.app/ai-lecture-room/dist/index.html" target="_blank" class="inline-flex items-center gap-2 px-4 py-2 bg-emerald-600 text-white text-sm font-bold rounded-lg hover:bg-emerald-700 transition-colors">
                                     <i class="fas fa-play-circle"></i> 강의 듣기
-                                </button>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -76,12 +76,12 @@
                                 <span class="bg-teal-50 text-teal-700 px-3 py-1 rounded-md text-xs font-semibold">Accountability</span><span class="bg-teal-50 text-teal-700 px-3 py-1 rounded-md text-xs font-semibold">Review</span>
                             </div>
                             <div class="flex gap-2">
-                                <button class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors">
+                                <a href="textbook_ethics_accountability.html" class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors">
                                     <i class="fas fa-book-reader"></i> 강의 보기
-                                </button>
-                                <button class="inline-flex items-center gap-2 px-4 py-2 bg-teal-600 text-white text-sm font-bold rounded-lg hover:bg-teal-700 transition-colors">
+                                </a>
+                                <a href="https://al-class.vercel.app/ai-lecture-room/dist/index.html" target="_blank" class="inline-flex items-center gap-2 px-4 py-2 bg-teal-600 text-white text-sm font-bold rounded-lg hover:bg-teal-700 transition-colors">
                                     <i class="fas fa-play-circle"></i> 강의 듣기
-                                </button>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -99,12 +99,12 @@
                                 <span class="bg-amber-50 text-amber-700 px-3 py-1 rounded-md text-xs font-semibold">Hallucination</span><span class="bg-amber-50 text-amber-700 px-3 py-1 rounded-md text-xs font-semibold">Fact Check</span>
                             </div>
                             <div class="flex gap-2">
-                                <button class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors">
+                                <a href="textbook_ethics_hallucination.html" class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors">
                                     <i class="fas fa-book-reader"></i> 강의 보기
-                                </button>
-                                <button class="inline-flex items-center gap-2 px-4 py-2 bg-amber-600 text-white text-sm font-bold rounded-lg hover:bg-amber-700 transition-colors">
+                                </a>
+                                <a href="https://al-class.vercel.app/ai-lecture-room/dist/index.html" target="_blank" class="inline-flex items-center gap-2 px-4 py-2 bg-amber-600 text-white text-sm font-bold rounded-lg hover:bg-amber-700 transition-colors">
                                     <i class="fas fa-play-circle"></i> 강의 듣기
-                                </button>
+                                </a>
                             </div>
                         </div>
                     </div>
