--- a/lecture_ethics_class1.html
+++ b/lecture_ethics_class1.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
         body { font-family: 'Pretendard', sans-serif; scroll-behavior: smooth; }
-        .gradient-bg { background: linear-gradient(135deg, #4f46e5 0%, #7c3aed 100%); } /* Indigo-Purple for Ethics */
+        .gradient-bg { background: linear-gradient(135deg, #4f46e5 0%, #7c3aed 100%); }
         .card-shadow { box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.05); }
     </style>
 </head>
@@ -53,12 +53,12 @@
                                 <span class="bg-indigo-50 text-indigo-700 px-3 py-1 rounded-md text-xs font-semibold">Copyright</span><span class="bg-indigo-50 text-indigo-700 px-3 py-1 rounded-md text-xs font-semibold">Legal Case</span>
                             </div>
                             <div class="flex gap-2">
-                                <button class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors">
+                                <a href="textbook_ethics_copyright.html" class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors">
                                     <i class="fas fa-book-reader"></i> 강의 보기
-                                </button>
-                                <button class="inline-flex items-center gap-2 px-4 py-2 bg-indigo-600 text-white text-sm font-bold rounded-lg hover:bg-indigo-700 transition-colors">
+                                </a>
+                                <a href="https://al-class.vercel.app/ai-lecture-room/dist/index.html" target="_blank" class="inline-flex items-center gap-2 px-4 py-2 bg-indigo-600 text-white text-sm font-bold rounded-lg hover:bg-indigo-700 transition-colors">
                                     <i class="fas fa-play-circle"></i> 강의 듣기
-                                </button>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -76,12 +76,12 @@
                                 <span class="bg-blue-50 text-blue-700 px-3 py-1 rounded-md text-xs font-semibold">EU AI Act</span><span class="bg-blue-50 text-blue-700 px-3 py-1 rounded-md text-xs font-semibold">Risk-based</span>
                             </div>
                             <div class="flex gap-2">
-                                <button class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors">
+                                <a href="textbook_ethics_eu_act.html" class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors">
                                     <i class="fas fa-book-reader"></i> 강의 보기
-                                </button>
-                                <button class="inline-flex items-center gap-2 px-4 py-2 bg-blue-600 text-white text-sm font-bold rounded-lg hover:bg-blue-700 transition-colors">
+                                </a>
+                                <a href="https://al-class.vercel.app/ai-lecture-room/dist/index.html" target="_blank" class="inline-flex items-center gap-2 px-4 py-2 bg-blue-600 text-white text-sm font-bold rounded-lg hover:bg-blue-700 transition-colors">
                                     <i class="fas fa-play-circle"></i> 강의 듣기
-                                </button>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -99,12 +99,12 @@
                                 <span class="bg-red-50 text-red-700 px-3 py-1 rounded-md text-xs font-semibold">Privacy</span><span class="bg-red-50 text-red-700 px-3 py-1 rounded-md text-xs font-semibold">GDPR</span>
                             </div>
                             <div class="flex gap-2">
-                                <button class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors">
+                                <a href="textbook_ethics_privacy.html" class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors">
                                     <i class="fas fa-book-reader"></i> 강의 보기
-                                </button>
-                                <button class="inline-flex items-center gap-2 px-4 py-2 bg-red-600 text-white text-sm font-bold rounded-lg hover:bg-red-700 transition-colors">
+                                </a>
+                                <a href="https://al-class.vercel.app/ai-lecture-room/dist/index.html" target="_blank" class="inline-flex items-center gap-2 px-4 py-2 bg-red-600 text-white text-sm font-bold rounded-lg hover:bg-red-700 transition-colors">
                                     <i class="fas fa-play-circle"></i> 강의 듣기
-                                </button>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -122,12 +122,12 @@
                                 <span class="bg-slate-50 text-slate-700 px-3 py-1 rounded-md text-xs font-semibold">Security</span><span class="bg-slate-50 text-slate-700 px-3 py-1 rounded-md text-xs font-semibold">Data Leak</span>
                             </div>
                             <div class="flex gap-2">
-                                <button class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors">
+                                <a href="textbook_ethics_leak.html" class="inline-flex items-center gap-2 px-4 py-2 bg-slate-100 text-slate-700 text-sm font-bold rounded-lg hover:bg-slate-200 transition-colors">
                                     <i class="fas fa-book-reader"></i> 강의 보기
-                                </button>
-                                <button class="inline-flex items-center gap-2 px-4 py-2 bg-slate-600 text-white text-sm font-bold rounded-lg hover:bg-slate-700 transition-colors">
+                                </a>
+                                <a href="https://al-class.vercel.app/ai-lecture-room/dist/index.html" target="_blank" class="inline-flex items-center gap-2 px-4 py-2 bg-slate-600 text-white text-sm font-bold rounded-lg hover:bg-slate-700 transition-colors">
                                     <i class="fas fa-play-circle"></i> 강의 듣기
-                                </button>
+                                </a>
                             </div>
                         </div>
                     </div>
